--- a/src/pages/tab-overview-detail/tab-overview-detail.html
+++ b/src/pages/tab-overview-detail/tab-overview-detail.html
@@ -391,5 +391,5 @@
 </ion-content>
 
 <ion-footer>
-  <button ion-button full no-margin color="sky-blue1" (click)="onSave()">UPDATE</button>
+  <button ion-button full no-margin color="gray2" (click)="onBack()">BACK</button>
 </ion-footer>
