--- a/src/pages/tab-overview-detail/tab-overview-detail.html
+++ b/src/pages/tab-overview-detail/tab-overview-detail.html
@@ -239,7 +239,7 @@
       </ion-col>
       <ion-col col-5 text-center>
         <div>
-          <span>{{o.ico_pre_sale_date ? (o.ico_pre_sale_date | date:'dd/MM/yy') : '-'}}</span>
+          <span>{{o.ico_pre_sale_date ? (o.ico_pre_sale_date | date:'MM/dd/yy') : '-'}}</span>
         </div>
       </ion-col>
     </ion-row>
@@ -255,7 +255,7 @@
       </ion-col>
       <ion-col col-5 text-center>
         <div>
-          <span>{{o.ico_start_date ? (o.ico_start_date | date:'dd/MM/yy') : '-'}}</span>
+          <span>{{o.ico_start_date ? (o.ico_start_date | date:'MM/dd/yy') : '-'}}</span>
         </div>
       </ion-col>
     </ion-row>
@@ -271,7 +271,7 @@
       </ion-col>
       <ion-col col-5 text-center>
         <div>
-          <span>{{o.ico_end_date ? (o.ico_end_date | date:'dd/MM/yy') : '-'}}</span>
+          <span>{{o.ico_end_date ? (o.ico_end_date | date:'MM/dd/yy') : '-'}}</span>
         </div>
       </ion-col>
     </ion-row>
