--- a/src/pages/tab-ico-rating-detail/tab-ico-rating-detail.html
+++ b/src/pages/tab-ico-rating-detail/tab-ico-rating-detail.html
@@ -94,7 +94,7 @@
       </ion-col>
       <ion-col col-6 text-center>
         <div>
-          <span>{{i.ico_pre_sale_date ? (i.ico_pre_sale_date | date:'dd/MM/yy') : '-'}}</span>
+          <span>{{i.ico_pre_sale_date ? (i.ico_pre_sale_date | date:'MM/dd/yy') : '-'}}</span>
         </div>
       </ion-col>
     </ion-row>
@@ -110,7 +110,7 @@
       </ion-col>
       <ion-col col-6 text-center>
         <div>
-          <span>{{i.ico_start_date ? (i.ico_start_date | date:'dd/MM/yy') : '-'}}</span>
+          <span>{{i.ico_start_date ? (i.ico_start_date | date:'MM/dd/yy') : '-'}}</span>
         </div>
       </ion-col>
     </ion-row>
@@ -126,7 +126,7 @@
       </ion-col>
       <ion-col col-6 text-center>
         <div>
-          <span>{{i.ico_end_date ? (i.ico_end_date | date:'dd/MM/yy') : '-'}}</span>
+          <span>{{i.ico_end_date ? (i.ico_end_date | date:'MM/dd/yy') : '-'}}</span>
         </div>
       </ion-col>
     </ion-row>
@@ -142,7 +142,7 @@
       </ion-col>
       <ion-col col-6 text-center>
         <div>
-          <span>{{i.ico_receive_token_date ? (i.ico_receive_token_date | date:'dd/MM/yy') : '-'}}</span>
+          <span>{{i.ico_receive_token_date ? (i.ico_receive_token_date | date:'MM/dd/yy') : '-'}}</span>
         </div>
       </ion-col>
     </ion-row>
